# FAST_API_PROJECT

./: .env  pyproject.toml
FAST_API/: main.py
FAST_API/src/conf/: config.py
FAST_API/src/database/: db.py
FAST_API/src/entity/: models.py
FAST_API/src/repository/: contacts.py  users.py
FAST_API/src/routes/: auth.py  contacts.py
FAST_API/src/schemas/: contacts.py  user.py
FAST_API/src/services/: auth.py  email.py
FAST_API/src/services/templates/: verify_email.html
migrations/: env.py
migrations/versions/: 0e106a260c13_init.py  486ddfea6d0e_init.py  529066d67bf8_add_verify_for_user.py
